kubernetes/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/entrypoints.web.http.redirections.entrypoint.to: websecure
    traefik.ingress.kubernetes.io/entrypoints.web.http.redirections.entrypoint.scheme: https
spec:
  rules:
    - host: grafana.k3s-homelab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: http-grafana
  tls:
    - hosts:
        - prometheus.k3s-homelab.org
      secretName: prometheus-tls-secret
