kubernetes/ingress/nginx-ingress-setup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/entrypoints.web.http.redirections.entrypoint.to: websecure
    traefik.ingress.kubernetes.io/entrypoints.web.http.redirections.entrypoint.scheme: https
spec:
  rules:
    - host: nginx.k3s-homelab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
  tls:
    - hosts:
        - nginx.k3s-homelab.org
      secretName: nginx-tls-secret
