kubernetes/ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/entrypoints.web.http.redirections.entrypoint.to: websecure
    traefik.ingress.kubernetes.io/entrypoints.web.http.redirections.entrypoint.scheme: https
spec:
  rules:
    - host: prometheus.k3s-homelab.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus
                port:
                  name: http-prometheus
  tls:
    - hosts:
        - prometheus.k3s-homelab.org
      secretName: prometheus-tls-secret
